# money-log

./: Cargo.toml  README.md
docs/: GET_STARTED.md
src/: lib.rs  main.rs
src/models/: mod.rs
src/services/: mod.rs
src/services/io/: mod.rs
src/services/register/: mod.rs
src/services/summarize/: mod.rs
src/services/validate/: mod.rs
