[package]
name = "money-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { varsion = "1.0", features = ["derive"]}
serde_json = "1.0.85"
chrono = { varsion = "0.4", features = ["serde"]}
